@@ -29,12 +29,13 @@ Template for new versions:
 ## New Tools
 - `control-panel`: new commandline interface for control panel functions
 - `uniform-unstick`: (reinstated) force squad members to drop items that they picked up in the wrong order so they can get everything equipped properly
+- `gui/reveal`: temporarily unhide terrain and then automatically hide it again when you're ready to unpause
 
 ## New Features
 - `uniform-unstick`: add overlay to the squad equipment screen to show a equipment conflict report and give you a one-click button to fix
 
 ## Fixes
-- `source`: Source locations now persist with fort throughout saves and loads
+- `source`: water and magma sources now persist with fort across saves and loads
 - `warn-stranded`: Automatically ignore citizens who are gathering plants or digging to avoid issues with gathering fruit via stepladders and weird issues with digging
 - `warn-stranded`: Update onZoom to use df's centering functionality
 - `ban-cooking`: fix banning creature alcohols resulting in error
